# c-elegans-app

./: .gitattributes  .gitignore  README.md  biome.json  dev-install.py  flake.nix  format-ingestion.md  generate-binding.bash  run-frontent.bash  run-server.bash
.github/workflows/: biome.yml  black.yml  build.yml  pytest.yml
applications/visualizer/: Dockerfile  generate-binding.bash
backend/: combine.py  manage.py  requirements-dev.txt  requirements.txt  run-server.bash  setup-backend.bash
backend/api/: api.py  models.py  populatedb.py
backend/celegans/: asgi.py  settings.py  urls.py  wsgi.py
backend/openapi/: openapi.json
deployment/: codefresh-dev.yaml  codefresh-prod.yaml
deployment-configuration/: values-template.yaml
extraction/: requirements.txt  segmentation-extraction.py
frontend/: package-lock.json  package.json  vite.config.ts
ingestion/: .gitignore  README.md  format-ingestion.md  pyproject.toml
ingestion/ingestion/: __init__.py  __main__.py  cli.py  em_metadata.py  errors.py  extract.py  filesystem.py  hash.py  ingest.py  logging.py  schema.py  seg_extraction.py  validator.py  xdg.py
ingestion/ingestion/segmentation/: extraction.py  piramid.py
ingestion/ingestion/storage/: blob.py  filesystem.py  gcp.py  hash.py  sqlite.py
ingestion/ingestion/testing/: gcs_mock.py
ingestion/tests/: test_em_metadata.py  test_filesystem.py  test_hash.py  test_main.py  test_schema.py  test_validator.py
ingestion/tests/fixtures/: fake_secret.json
ingestion/tests/fixtures/em-tiles/: metadata.json
ingestion/tests/fixtures/invalid-data/: README.md  datasets.json  neurons.json
ingestion/tests/fixtures/invalid-data/annotations/: complete.annotations.json  head.annotations.json
ingestion/tests/fixtures/invalid-data/connections/: white_1986_jse.json
ingestion/tests/fixtures/reference-data/: datasets.json
ingestion/tests/fixtures/reference-data/annotations/: head.annotations.json
ingestion/tests/fixtures/reference-data/connections/: white_1986_jsh.json  witvliet_2020_1.json
ingestion/tests/fixtures/segmentation/: metadata.json
ingestion/tests/storage/: test_blob.py  test_filesystem.py
(+193 files in other folders)
